--- a/src/templates/sobre.html
+++ b/src/templates/sobre.html
@@ -1,7 +1,7 @@
-{% extends 'index.html' %}
+{% extends 'layout.html' %}
 
 {% block content %}
-	<main class="main-sobre">
+	<section class="main-sobre">
 		<h1>Algoritmo bubble sort</h1>
 		<p>O bubble sort, ou ordenação por flutuação (literalmente "por bolha"), é um algoritmo de ordenação dos mais simples. A ideia é percorrer o vector diversas vezes, e a cada passagem fazer flutuar para o topo / base o maior elemento da sequência. Essa movimentação lembra a forma como as bolhas em um tanque de água procuram seu próprio nível, e disso vem o nome do algoritmo.</p>
 		<figure>
@@ -25,5 +25,5 @@
 			<li><a href="#"><i class="bi bi-check2-circle"></i> Luís Manuel Muhele;</a></li>
 			<li><a href="#"><i class="bi bi-check2-circle"></i> Nickison Pedro Bonito.</a></li>
 		</ol>
-	</main>
+	</section>
 {% endblock %}
