fix/ reafoctor all templates

--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -14,15 +14,15 @@
         <a href="#"><i class="bi bi-list-task"></i>Ordenar</a>
         <ul class="sub-menu">
           <li>
-            <a href="/ordenar/{{ 1 }}"><i class="bi bi-archive"></i>A-Z</a>
+            <a href="/ordenar/1"><i class="bi bi-archive"></i>A-Z</a>
           </li>
           <li>
-            <a href="/ordenar/{{ 2 }}"
+            <a href="/ordenar/4"
               ><i class="bi bi-currency-euro"></i> Orçamento</a
             >
           </li>
           <li>
-            <a href="/ordenar/{{ 3 }}"
+            <a href="/ordenar/3"
               ><i class="bi bi-trophy-fill"></i> Títulos</a
             >
           </li>
