--- a/src/templates/sobre.html
+++ b/src/templates/sobre.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
 
+{% block title %} Sobre {% endblock title %}
+
 {% block content %}
 	<section class="main-sobre">
 		<h1>Algoritmo bubble sort</h1>
