--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
     <div class="logo">
-      <a href="/">AED</a>
+      <a href="/">AED - Bubble Sort</a>
     </div>
     <ul>
       <li>
